# termchat

./: Cargo.toml  README.md
.github/workflows/: build-release.yml  release.yml
.winget/: LHagfoss.termchat.0.1.0.yaml  README.md
AUR/: .SRCINFO  PKGBUILD  README.md
scripts/: install.ps1  install.sh
src/: cli.rs  config.rs  main.rs  protocol.rs
src/client/: display.rs  emoji.rs  input.rs  mod.rs  theme.rs  tui.rs
src/server/: mod.rs  ollama.rs  state.rs
