[package]
name = "termchat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
crossterm = "0.29.0"
directories = "6.0.0"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
toml = "1.1.2"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

[package.metadata.deb]
maintainer = "LHagfoss <lucash.1707@outlook.com>"
copyright = "2024, LHagfoss"
extended-description = "A fast, asynchronous terminal chat server and client."
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/termchat", "usr/bin/", "755"],
]
